--- a/darkheresy.css
+++ b/darkheresy.css
@@ -36,7 +36,7 @@ z-index: 9999;
 .charsheet span.sheet-tab  {
 text-align: center;
 display: inline-block;
-background: #C2272D;
+background: #000000;
 color: #FFD700;
 border: solid 1px rgba(0, 0, 0, 0.35);
 font-size: 17px;
